--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "keywords": ["education", "security", "encryption", "authentication"],
   "author": "",
   "license": "MIT",
+  "engines": {
+    "node": "18.x",
+    "npm": "9.x"
+  },
   "dependencies": {
     "express": "^4.18.2",
     "express-session": "^1.17.3",
